--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,10 +19,11 @@ h1 {
   text-transform: uppercase;
   text-align: center;
   padding: 10px;
+  font-size: 30px;
 }
 
-input {
-  font-size: 16px;
+.enterCityName {
+  font-size: 13px;
   padding: 5px 10px;
   margin-top: 10px;
   background: none;
@@ -31,14 +32,14 @@ input {
   border-bottom: 2px solid #ddd;
 }
 
-input::placeholder {
+.enterCityName::placeholder {
   color: #ddd;
   font-family: 'Montserrat', sans-serif;
 }
 
 button {
-  padding: 10px;
-  margin-left: 20px;
+  padding: 8px;
+  margin-left: 15px;
   color: #fff;
   font-weight: bold;
   background: none;
@@ -46,6 +47,8 @@ button {
   text-transform: uppercase;
   cursor: pointer;
   transition: background-color .3s, color .3s;
+  font-size: 10px;
+
 }
 
 button:hover {
@@ -54,30 +57,30 @@ button:hover {
 }
 
 .wrapper {
-  width: 800px;
-  height: 400px;
+  width: 600px;
+  height: 300px;
   background-color: rgba(73, 73, 73, 0.8);
   border: 2px solid white;
   border-radius: 25px;
 }
 
 .top {
-  height: 260px;
+  height: 200px;
 }
 
 .bottom {
-  height: 140px;
+  height: 100px;
 }
 
 .main-info {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 200px;
+  height: 150px;
 }
 
 .city-name {
-  font-size: 40px;
+  font-size: 23px;
 }
 
 .headings,
@@ -88,7 +91,7 @@ button:hover {
 
 .headings p,
 .weather-info p {
-  width: 33.3%;
+  width: 25%;
   text-align: center;
 }
 
@@ -102,16 +105,21 @@ button:hover {
 
 .weather-info {
   height: 65%;
-  font-size: 26px;
+  font-size: 20px;
 }
 
 .photo {
-  width: 140px;
-  height: 140px;
+
+  width: 100px;
+  height: 100px;
 }
 
 .warning {
   margin-top: 10px;
   font-size: 14px;
   color: tomato;
+}
+
+p {
+  font-size: 15px
 }
