--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,114 +19,122 @@ h1 {
   text-transform: uppercase;
   text-align: center;
   padding: 10px;
-  font-size: 30px;
 }
 
-.enterCityName {
-  font-size: 13px;
-  padding: 5px 10px;
-  margin-top: 10px;
-  background: none;
-  border: none;
-  color: #fff;
-  border-bottom: 2px solid #ddd;
-}
 
-.enterCityName::placeholder {
-  color: #ddd;
-  font-family: 'Montserrat', sans-serif;
-}
-
-button {
-  padding: 8px;
-  margin-left: 15px;
-  color: #fff;
-  font-weight: bold;
-  background: none;
-  border-radius: 5px;
-  text-transform: uppercase;
-  cursor: pointer;
-  transition: background-color .3s, color .3s;
-  font-size: 10px;
-  outline: 0;
-
-}
-
-button:hover {
-  color: #333;
-  background-color: #ddd;
-}
 
 .wrapper {
-  width: 600px;
-  height: 300px;
+  width: 800px;
+  height: 400px;
   background-color: rgba(73, 73, 73, 0.8);
   border: 2px solid white;
   border-radius: 25px;
-}
 
-.top {
-  height: 200px;
-}
 
-.bottom {
-  height: 100px;
-}
+  .top {
+    height: 260px;
 
-.main-info {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 150px;
-}
+    h1 {
+      text-transform: uppercase;
+      text-align: center;
+      padding: 10px;
+    }
 
-.city-name {
-  font-size: 23px;
-}
+    .main-info {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      height: 200px;
 
-.headings,
-.weather-info {
-  display: flex;
-  align-items: center;
-}
+      .city-name {
+        font-size: 40px;
+      }
 
-.headings p,
-.weather-info p {
-  width: 25%;
-  text-align: center;
-}
 
-.headings {
-  height: 35%;
-  text-transform: uppercase;
-  font-weight: bold;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-}
+      input {
+        font-size: 16px;
+        padding: 5px 10px;
+        margin-top: 10px;
+        background: none;
+        border: none;
+        color: #fff;
+        border-bottom: 2px solid #ddd;
+        outline: none;
+      }
 
-.weather-info {
-  height: 65%;
-  font-size: 20px;
-}
+      input::placeholder {
+        color: #ddd;
+        font-family: 'Montserrat', sans-serif;
+      }
 
-.photo {
+      button {
+        outline: none;
+        padding: 10px;
+        margin-left: 20px;
+        color: #fff;
+        font-weight: bold;
+        background: none;
+        border-radius: 5px;
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: background-color .3s, color .3s;
+      }
 
-  width: 100px;
-  height: 100px;
-}
+      .microphone {
+        padding: 4.5px 7px 8px 7px;
+        font-size: 20px;
+      }
 
-.warning {
-  margin-top: 10px;
-  font-size: 14px;
-  color: tomato;
-}
+      button:hover {
+        color: #333;
+        background-color: #ddd;
+      }
 
-p {
-  font-size: 15px
-}
+      .photo {
+        width: 140px;
+        height: 140px;
+      }
 
-.microphone {
+      .warning {
+        margin-top: 10px;
+        font-size: 14px;
+        color: tomato;
+      }
+    }
+  }
 
-  padding: 4px 7px 7px 7px;
-  font-size: 15px;
+  .bottom {
+    height: 140px;
+
+    .headings,
+    .weather-info {
+      display: flex;
+      align-items: center;
+    }
+
+
+    .headings p,
+    .weather-info p {
+      width: 33.3%;
+      text-align: center;
+    }
+  }
+
+  .headings {
+    height: 35%;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .weather-info {
+    height: 65%;
+    font-size: 26px;
+
+    p {
+      font-size: 18px
+    }
+  }
+
 }
