--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,137 +4,148 @@
   padding: 0;
 }
 
-body {
+.weather-APP {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   font-family: 'Montserrat', sans-serif;
-  background: rgb(0, 129, 255);
-  background: linear-gradient(90deg, rgba(0, 129, 255, 0.7987570028011204) 28%, rgba(16, 224, 212, 1) 100%);
+  // background: rgb(0, 129, 255);
+  // background: linear-gradient(90deg, rgba(0, 129, 255, 0.7987570028011204) 28%, rgba(16, 224, 212, 1) 100%);
   font-size: 20px;
-}
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: -1;
 
-h1 {
-  text-transform: uppercase;
-  text-align: center;
-  padding: 10px;
-}
-
-
-
-.wrapper {
-  width: 800px;
-  height: 400px;
-  background-color: rgba(73, 73, 73, 0.8);
-  border: 2px solid white;
-  border-radius: 25px;
-
-
-  .top {
-    height: 260px;
-
-    h1 {
-      text-transform: uppercase;
-      text-align: center;
-      padding: 10px;
-    }
-
-    .main-info {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      height: 200px;
-
-      .city-name {
-        font-size: 40px;
-      }
+  .weather-APP__overlayer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    background-color: rgba($color: #000000, $alpha: 0.4);
+    z-index: 1;
+    width: 100%;
+  }
 
 
-      input {
-        font-size: 16px;
-        padding: 5px 10px;
-        margin-top: 10px;
-        background: none;
-        border: none;
-        color: #fff;
-        border-bottom: 2px solid #ddd;
-        outline: none;
-      }
+  .wrapper {
+    width: 800px;
+    height: 400px;
+    background-color: rgba(73, 73, 73, 0.8);
+    border: 2px solid white;
+    border-radius: 25px;
+    z-index: 3;
 
-      input::placeholder {
-        color: #ddd;
-        font-family: 'Montserrat', sans-serif;
-      }
 
-      button {
-        outline: none;
-        padding: 10px;
-        margin-left: 20px;
-        color: #fff;
-        font-weight: bold;
-        background: none;
-        border-radius: 5px;
+    .top {
+      height: 260px;
+
+      h1 {
         text-transform: uppercase;
-        cursor: pointer;
-        transition: background-color .3s, color .3s;
+        text-align: center;
+        padding: 10px;
       }
 
-      .microphone {
-        padding: 4.5px 7px 8px 7px;
-        font-size: 20px;
-      }
+      .main-info {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height: 200px;
 
-      button:hover {
-        color: #333;
-        background-color: #ddd;
-      }
+        .city-name {
+          font-size: 40px;
+        }
 
-      .photo {
-        width: 140px;
-        height: 140px;
-      }
 
-      .warning {
-        margin-top: 10px;
-        font-size: 14px;
-        color: tomato;
+        input {
+          font-size: 16px;
+          padding: 5px 10px;
+          margin-top: 10px;
+          background: none;
+          border: none;
+          color: #fff;
+          border-bottom: 2px solid #ddd;
+          outline: none;
+        }
+
+        input::placeholder {
+          color: #ddd;
+          font-family: 'Montserrat', sans-serif;
+        }
+
+        button {
+          outline: none;
+          padding: 10px;
+          margin-left: 20px;
+          color: #fff;
+          font-weight: bold;
+          background: none;
+          border-radius: 5px;
+          text-transform: uppercase;
+          cursor: pointer;
+          transition: background-color .3s, color .3s;
+        }
+
+        .microphone {
+          padding: 4.5px 7px 8px 7px;
+          font-size: 20px;
+        }
+
+        button:hover {
+          color: #333;
+          background-color: #ddd;
+        }
+
+        .photo {
+          width: 140px;
+          height: 140px;
+          color: white;
+        }
+
+        .warning {
+          margin-top: 10px;
+          font-size: 14px;
+          color: tomato;
+        }
       }
     }
-  }
 
-  .bottom {
-    height: 140px;
+    .bottom {
+      height: 140px;
 
-    .headings,
+      .headings,
+      .weather-info {
+        display: flex;
+        align-items: center;
+      }
+
+
+      .headings p,
+      .weather-info p {
+        width: 33.3%;
+        text-align: center;
+      }
+    }
+
+    .headings {
+      height: 35%;
+      text-transform: uppercase;
+      font-weight: bold;
+      border-top: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
+    }
+
     .weather-info {
-      display: flex;
-      align-items: center;
+      height: 65%;
+      font-size: 26px;
+
+      p {
+        font-size: 18px
+      }
     }
 
-
-    .headings p,
-    .weather-info p {
-      width: 33.3%;
-      text-align: center;
-    }
-  }
-
-  .headings {
-    height: 35%;
-    text-transform: uppercase;
-    font-weight: bold;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-  }
-
-  .weather-info {
-    height: 65%;
-    font-size: 26px;
-
-    p {
-      font-size: 18px
-    }
   }
 
 }
