--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,23 +1,27 @@
+@import './variables';
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-@import './variables';
-
 .weather-APP {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  font-family: 'Montserrat', sans-serif;
+  font-family: $mainFont;
   font-size: 20px;
   position: relative;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  overflow: hidden;
 
+  @media(max-width: 850px) {
+    align-items: start;
+  }
 
   .weather-APP__overlayer {
     position: absolute;
@@ -39,6 +43,28 @@
     align-items: center;
     z-index: 5;
 
+    @media(max-width: 1000px) {
+      width: 800px;
+    }
+
+    @media(max-width: 850px) and (orientation: portrait) {
+      flex-wrap: wrap;
+      width: 400px;
+      height: 600px;
+    }
+
+    @media(max-width: 850px) and (orientation: landscape) {
+      height: 400px;
+    }
+
+    @media(max-height: 400px) and (orientation: landscape) {
+      height: 360px;
+    }
+
+
+    @media(max-width: 405px) {
+      width: 360px;
+    }
 
     .data-information-input-container {
       display: flex;
@@ -48,18 +74,45 @@
 
 
       .main-info {
-        align-items: center;
+        @media(max-width: 850px) and (orientation: portrait) {
+          padding-left: 35px;
+        }
 
+        @media(max-width: 850px) and (orientation: landscape) {
+          margin-left: 10px;
+        }
+
+        @media(max-width: 670px) and (orientation: landscape) {}
 
         .main-info__time {
           padding: 0;
           margin: 0;
           font-size: 135px;
+
+          @media(max-width: 1000px) {
+            font-size: 105px;
+          }
+
+          @media(max-width: 405px) {
+            font-size: 105px;
+            padding-bottom: 5px;
+          }
         }
 
         .main-info__data {
           text-align: center;
           margin-bottom: 25px;
+          font-size: 20px;
+
+          @media(max-width: 1000px) {
+            font-size: 18px;
+            margin: 5px 0 25px 0;
+            text-align: left;
+          }
+
+          @media(max-width: 405px) {
+            margin: 5px 0 20px 0;
+          }
         }
 
 
@@ -72,6 +125,10 @@
           color: $mainColor;
           border-bottom: 2px solid $secondayColor;
           outline: none;
+
+          @media(max-width: 405px) {
+            width: 170px;
+          }
         }
 
         input::placeholder {
@@ -89,20 +146,23 @@
           text-transform: uppercase;
           cursor: pointer;
           transition: background-color .3s, color .3s;
+
+          &:hover {
+            color: #333;
+            background-color: $secondayColor;
+          }
+
+          @media(max-width: 750px) and (orientation: landscape) {
+            margin-left: 7px;
+          }
         }
 
-        .microphone {
+        .main-info__microphone {
           padding: 4.5px 7px 8px 7px;
           font-size: 20px;
         }
 
-        button:hover {
-          color: #333;
-          background-color: $secondayColor;
-        }
-
-
-        .warning {
+        .main-info__warning {
           margin-top: 10px;
           font-size: 14px;
           color: tomato;
@@ -111,33 +171,53 @@
     }
 
     .weather-main-information {
-
       background-color: rgba($color: #000000, $alpha: 0.5);
       width: 600px;
       padding: 70px;
+
+      @media(max-width: 1000px) {
+        padding: 45px;
+        width: 400px;
+      }
+
+      @media(max-width: 850px) and (orientation: landscape) {
+        width: 370px;
+        margin-right: 10px;
+        padding: 35px 30px 35px 30px;
+      }
+
+      @media(max-width: 740px) and (orientation: landscape) {
+        width: 330px;
+      }
 
       .city-name {
         font-size: 40px;
         border-bottom: solid;
         margin-bottom: 25px;
+
+        @media(max-width: 1000px) {
+          font-size: 35px;
+        }
       }
 
-
-      .weather-info-container {
+      .weather-info {
         height: 65%;
-        font-size: 26px;
         display: flex;
         align-items: center;
         text-align: center;
         justify-content: space-between;
 
-
-        .photo {
+        .weather-info__photo {
           width: 140px;
           height: 140px;
           color: white;
-        }
 
+          @media(max-width: 1000px) {
+            width: 110px;
+            height: 110px;
+          }
+
+        }
 
         .weather-info__parameters {
           display: flex;
@@ -146,11 +226,15 @@
           align-items: flex-start;
           font-size: 20px;
 
-          .temp {
+          .weather-info__temp {
             font-size: 90px;
+
+            @media(max-width: 1000px) {
+              font-size: 65px;
+            }
           }
 
-          .weather,
+          .weather-info__weather,
           .weather-info__humidity-items,
           .weather-info__pressure-items {
             color: $secondayColor;
@@ -161,9 +245,18 @@
             display: flex;
             flex-direction: row;
           }
+
+          .weather-info__humidity,
+          .weather-info__weather,
+          .weather-info__pressure {
+            font-size: 20px;
+
+            @media(max-width: 1000px) {
+              font-size: 17px;
+            }
+          }
         }
       }
-
     }
   }
 }
